--- a/[1.b] relfacx_cxr_preprocessing.ipynb
+++ b/[1.b] relfacx_cxr_preprocessing.ipynb
@@ -423,28 +423,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "physio_file_path = \"E:\\\\physionet.org\\\\files\\\\\"\n",
+    "\n",
+    "\n",
     "cxr_meta_df = pd.read_csv(\n",
     "    TabularDataPaths.SpreadSheet.get_sreadsheet(\n",
     "        XAMI_MIMIC_PATH, TabularDataPaths.SpreadSheet.cxr_meta\n",
     "    )\n",
+    ")\n",
+    "\n",
+    "core_patients_df = pd.read_csv(os.path.join( physio_file_path, \"mimiciv\\\\2.0\\\\hosp\\\\patients.csv.gz\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = (\n",
+    "    reflacx_meta_df.merge(\n",
+    "        cxr_meta_df,\n",
+    "        \"left\",\n",
+    "        left_on=\"dicom_id\",\n",
+    "        right_on=\"dicom_id\",\n",
+    "        suffixes=(\"\", \"cxr\"),\n",
+    "    )\n",
+    "    .merge(core_patients_df, \"left\", on=\"subject_id\", suffixes=(\"\", \"_patient\"))\n",
+    ")\n",
+    "\n",
+    "merged_df[\"age\"] = merged_df[\"anchor_age\"] + (\n",
+    "    merged_df[\"StudyDate\"].apply(lambda x: int(str(x)[:4])) - merged_df[\"anchor_year\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "merged_df = reflacx_meta_df.merge(\n",
-    "    cxr_meta_df, \"left\", left_on=\"dicom_id\", right_on=\"dicom_id\", suffixes=(\"\", \"cxr\"),\n",
-    ")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -465,12 +480,14 @@
     "    + merged_df[\"id\"].astype(str)\n",
     "    + \"\\\\anomaly_location_ellipses.csv\"\n",
     ")\n",
-    "merged_df = merged_df[~merged_df[\"eye_tracking_data_discarded\"]]\n"
+    "merged_df = merged_df[~merged_df[\"eye_tracking_data_discarded\"]]\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -508,7 +525,11 @@
     "    \"Interstitial lung disease\",\n",
     "    \"Lung nodule or mass\",\n",
     "    \"Pleural abnormality\",\n",
-    "    'Fracture' # don't have any positive case\n",
+    "    # 'Fracture' # don't have any positive case\n",
+    "\n",
+    "    # patients\n",
+    "    \"age\",\n",
+    "    \"gender\",\n",
     "]\n",
     "\n",
     "merged_df = merged_df[needed_columns]\n"
@@ -516,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +545,7 @@
      "output_type": "stream",
      "text": [
       "====================Columns have missing value in merged_df====================\n",
-      "[('stay_id', 2362)]\n"
+      "[('stay_id', 2362), ('age', 7), ('gender', 7)]\n"
      ]
     }
    ],
@@ -542,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +607,6 @@
        "      <th>image_size_y</th>\n",
        "      <th>anomaly_location_ellipses_path</th>\n",
        "      <th>...</th>\n",
-       "      <th>Abnormal mediastinal contour</th>\n",
        "      <th>Acute fracture</th>\n",
        "      <th>Enlarged hilum</th>\n",
        "      <th>Hiatal hernia</th>\n",
@@ -594,7 +614,8 @@
        "      <th>Interstitial lung disease</th>\n",
        "      <th>Lung nodule or mass</th>\n",
        "      <th>Pleural abnormality</th>\n",
-       "      <th>Fracture</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
        "      <th>split</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -619,8 +640,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -643,8 +664,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>test</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -667,8 +688,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -689,10 +710,10 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -715,13 +736,13 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>F</td>\n",
        "      <td>train</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 32 columns</p>\n",
+       "<p>5 rows × 33 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -746,38 +767,38 @@
        "3           AP          2544          3056   \n",
        "4           AP          2544          3056   \n",
        "\n",
-       "                      anomaly_location_ellipses_path  ...  \\\n",
-       "0  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
-       "1  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
-       "2  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
-       "3  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
-       "4  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...   \n",
+       "                      anomaly_location_ellipses_path  ...  Acute fracture  \\\n",
+       "0  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...             0.0   \n",
+       "1  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...             0.0   \n",
+       "2  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...             0.0   \n",
+       "3  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...             0.0   \n",
+       "4  {XAMI_MIMIC_PATH}\\patient_18111516\\REFLACX\\P10...  ...             0.0   \n",
        "\n",
-       "   Abnormal mediastinal contour  Acute fracture  Enlarged hilum  \\\n",
-       "0                           0.0             0.0             0.0   \n",
-       "1                           0.0             0.0             0.0   \n",
-       "2                           0.0             0.0             0.0   \n",
-       "3                           0.0             0.0             0.0   \n",
-       "4                           0.0             0.0             0.0   \n",
+       "   Enlarged hilum  Hiatal hernia  High lung volume / emphysema  \\\n",
+       "0             0.0            0.0                           0.0   \n",
+       "1             0.0            0.0                           0.0   \n",
+       "2             0.0            0.0                           0.0   \n",
+       "3             0.0            0.0                           0.0   \n",
+       "4             0.0            0.0                           0.0   \n",
        "\n",
-       "   Hiatal hernia  High lung volume / emphysema  Interstitial lung disease  \\\n",
-       "0            0.0                           0.0                        0.0   \n",
-       "1            0.0                           0.0                        0.0   \n",
-       "2            0.0                           0.0                        0.0   \n",
-       "3            0.0                           0.0                        0.0   \n",
-       "4            0.0                           0.0                        0.0   \n",
+       "   Interstitial lung disease  Lung nodule or mass Pleural abnormality   age  \\\n",
+       "0                        0.0                  0.0                 0.0  69.0   \n",
+       "1                        0.0                  0.0                 0.0  69.0   \n",
+       "2                        0.0                  0.0                 0.0  69.0   \n",
+       "3                        0.0                  1.0                 0.0  69.0   \n",
+       "4                        0.0                  0.0                 0.0  69.0   \n",
        "\n",
-       "  Lung nodule or mass  Pleural abnormality  Fracture  split  \n",
-       "0                 0.0                  0.0       0.0  train  \n",
-       "1                 0.0                  0.0       0.0   test  \n",
-       "2                 0.0                  0.0       0.0  train  \n",
-       "3                 1.0                  0.0       0.0  train  \n",
-       "4                 0.0                  0.0       0.0  train  \n",
+       "   gender  split  \n",
+       "0       F  train  \n",
+       "1       F   test  \n",
+       "2       F  train  \n",
+       "3       F  train  \n",
+       "4       F  train  \n",
        "\n",
-       "[5 rows x 32 columns]"
+       "[5 rows x 33 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,37 +809,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "OrderedDict([('Quality issue', 9.0),\n",
-       "             ('Fibrosis', 22.0),\n",
-       "             ('Wide mediastinum', 36.0),\n",
-       "             ('Fracture', 58.0),\n",
-       "             ('Airway wall thickening', 84.0),\n",
-       "             ('Hiatal hernia', 108.0),\n",
-       "             ('Interstitial lung disease', 126.0),\n",
-       "             ('Acute fracture', 155.0),\n",
-       "             ('Enlarged hilum', 236.0),\n",
-       "             ('Abnormal mediastinal contour', 357.0),\n",
-       "             ('High lung volume / emphysema', 412.0),\n",
-       "             ('Pneumothorax', 458.0),\n",
-       "             ('Lung nodule or mass', 663.0),\n",
-       "             ('Support devices', 1305.0),\n",
-       "             ('Groundglass opacity', 1770.0),\n",
-       "             ('Pulmonary edema', 1825.0),\n",
-       "             ('Enlarged cardiac silhouette', 3276.0),\n",
-       "             ('Consolidation', 3688.0),\n",
-       "             ('Atelectasis', 3744.0),\n",
-       "             ('Pleural abnormality', 4150.0)])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "\"['Fracture'] not in index\"",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_5472/383424413.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mcollections\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mOrderedDict\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mcount_map\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmerged_df\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mlabels_cols\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[0mOrderedDict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m{\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mk\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mv\u001b[0m \u001b[1;32min\u001b[0m \u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mcount_map\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mitems\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mitem\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mitem\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m}\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\mike8\\anaconda3\\envs\\pytorch\\lib\\site-packages\\pandas\\core\\frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3462\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mis_iterator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3463\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3464\u001b[1;33m             \u001b[0mindexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_listlike_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3465\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3466\u001b[0m         \u001b[1;31m# take() does not accept boolean indexers\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mc:\\Users\\mike8\\anaconda3\\envs\\pytorch\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_get_listlike_indexer\u001b[1;34m(self, key, axis)\u001b[0m\n\u001b[0;32m   1312\u001b[0m             \u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnew_indexer\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_reindex_non_unique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1313\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1314\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_validate_read_indexer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkeyarr\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mindexer\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1315\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1316\u001b[0m         if needs_i8_conversion(ax.dtype) or isinstance(\n",
+      "\u001b[1;32mc:\\Users\\mike8\\anaconda3\\envs\\pytorch\\lib\\site-packages\\pandas\\core\\indexing.py\u001b[0m in \u001b[0;36m_validate_read_indexer\u001b[1;34m(self, key, indexer, axis)\u001b[0m\n\u001b[0;32m   1375\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1376\u001b[0m             \u001b[0mnot_found\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mensure_index\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mmissing_mask\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0munique\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1377\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf\"{not_found} not in index\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1378\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1379\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: \"['Fracture'] not in index\""
+     ]
     }
    ],
    "source": [
@@ -830,12 +836,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "merged_df.to_csv(os.path.join(SPREADSHEET_FOLDER, \"reflacx_cxr.csv\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
